--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,14 @@ pdfplumber
 openpyxl
 unstructured
 
-
 # Core
 langchain
 langchain-community
 langchain-openai
 streamlit
 python-dotenv
+
+# Needed for embeddings and FAISS
+faiss-cpu
+openai
+pandas
